# betriebssystem-ha

./: aufruf-mit-itskylib.txt
01-listHomework/: main.c
02-C-RandomSleep/: a.out  main.c
03-fork-exec-program/: main.c  main.out
F01_H_Hausaufgabe1/: Makefile  a.out  loesung.txt  main.c
F01_U_ioexercise/: main.c
F01_U_opendir/: main.c
F02_H_printLess/: a.out  itskylib.h  main.c
F02_U_LockShared/: main.cpp
F03_H_DaemonWithNamedPipe/: CMakeLists.txt  Makefile  a.out  create-make  include  lib  main  main.c
F03_H_DaemonWithNamedPipe/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
F03_H_DaemonWithNamedPipe/nbproject/private/: private.xml
F03_U_NonBlocking/: CMakeLists.txt  a.out  main.c
F04_H_daemonReplies2Parent/: a.out  main.c
F04_U_SendSignalBetweenProcesses/: a.out  main.c
F05_H_SharedMemoryAccess/: CMakeLists.txt  a.out  main.cpp
F06_H_CountCharsMultiThreading/: CMakeLists.txt  a.out  main.c  main.cpp
F06_U_barrier_sort/: CMakeLists.txt  main.cpp
F12_H_client-server-exercise/: CMakeLists.txt  socket-thread-sort-once  socket-thread-sort-once.c  socket-thread-sort-shorts-once  socket-thread-sort-shorts-once-client  socket-thread-sort-shorts-once-client.c  socket-thread-sort-shorts-once-client.h  socket-thread-sort-shorts-once.c  socket-thread-sort-shorts-once.h  status.txt  tcp-square-client  tcp-square-client.c  thread-sort-once
F13_U_threadsAndPipes/: CMakeLists.txt  main.c  multii-threaded-multi-pipe-select.c  multii-threaded-multi-pipe-select.h  pipes-async-io.c  pipes-async-io.h  threadsAndPipesNonBlocking.c  threadsAndPipesNonBlocking.h
ForkTest/: a.out  (+1 more)
(+168 files in other folders)
